--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:
   web:
     build: .
-    container_name: django_app
+    container_name: medclinic_web
     command: gunicorn main.wsgi:application --bind 0.0.0.0:8089
     volumes:
       - .:/app
